# ahc018

./: .gitignore  Cargo.toml  README.md  copy-submit.sh  run-all.sh
experience/: Cargo.toml
experience/src/: main.rs
main/: Cargo.toml
main/src/: dsu.rs  grid.rs  judge.rs  lib.rs  main.rs  predict_h.rs  solver.rs
noise-rs/: Cargo.toml
noise-rs/src/: core.rs  gradient.rs  lib.rs  math.rs  noise_fns.rs  permutationtable.rs  s_curve.rs  utils.rs  vectors.rs
noise-rs/src/core/: perlin.rs  perlin_surflet.rs  worley.rs
noise-rs/src/math/: interpolate.rs  s_curve.rs  vectors.rs
noise-rs/src/math/s_curve/: quintic.rs
noise-rs/src/noise_fns/: generators.rs  modifiers.rs  transformers.rs
noise-rs/src/noise_fns/generators/: perlin.rs
tools/: Cargo.toml
tools/src/: lib.rs
