[package]
name = "ahc018"
version = "0.1.0"
edition = "2018"

[dependencies]
#ndarray = "=0.13.0"
#nalgebra = "=0.20.0"
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_pcg = "=0.2.1"
#petgraph = "=0.5.0"
#lazy_static = "=1.4.0"
#itertools = "=0.9.0"
#itertools-num = "=0.1.3"
#maplit = "=1.0.2"
#proconio = { version = "=0.3.8", features = ["derive"] }
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

clap = { version = "=4.0.22", features = ["derive"], optional = true }
