[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
proconio = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
svg = "0.13.0"
palette = { version = "0.6.1", features = ["named_gradients"] }
once_cell = "1.17.0"
raqote = { version = "0.8.2", default-features = false, features = ["png"] }

noise = { path = "../noise-rs" }
